--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,7 +3,7 @@
 
     <application>
         <service
-            android:name=".MyService"
+            android:name="MyService"
             android:exported="true" />
     </application>
 </manifest>
